// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/welcome Welcome Page shows Explore Page 1`] = `
<div>
  <div
    class="WelcomePage"
  >
    <div>
      <h1
        class="text-heading9"
      >
        Welcome To Boards
      </h1>
      <div
        class="WelcomePage__subtitle"
      >
        Boards is a project management tool that helps define, organize, track and manage work across teams, using a familiar kanban board view
      </div>
      <img
        alt="Boards Welcome Image"
        class="WelcomePage__image WelcomePage__image--large"
        src="http://localhost/test-file-stub"
      />
      <img
        alt="Boards Welcome Image"
        class="WelcomePage__image WelcomePage__image--small"
        src="http://localhost/test-file-stub"
      />
      <button
        class="Button filled size--large"
        type="button"
      >
        <span>
          Explore
        </span>
        <i
          class="CompassIcon icon-chevron-right Icon Icon--right"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`pages/welcome Welcome Page shows Explore Page with subpath 1`] = `
<div>
  <div
    class="WelcomePage"
  >
    <div>
      <h1
        class="text-heading9"
      >
        Welcome To Boards
      </h1>
      <div
        class="WelcomePage__subtitle"
      >
        Boards is a project management tool that helps define, organize, track and manage work across teams, using a familiar kanban board view
      </div>
      <img
        alt="Boards Welcome Image"
        class="WelcomePage__image WelcomePage__image--large"
        src="http://localhost/subpath/test-file-stub"
      />
      <img
        alt="Boards Welcome Image"
        class="WelcomePage__image WelcomePage__image--small"
        src="http://localhost/subpath/test-file-stub"
      />
      <button
        class="Button filled size--large"
        type="button"
      >
        <span>
          Explore
        </span>
        <i
          class="CompassIcon icon-chevron-right Icon Icon--right"
        />
      </button>
    </div>
  </div>
</div>
`;
